# example-localstack

./: .gitignore  README.md  docker-compose.yml
example-awscli-local/: pyproject.toml
example-cdk/: package.json
example-cdk/foo/: cdk.json  package.json
example-cdk/foo/lib/: foo-stack.ts
example-cdk/foo/lib/lambda/: hello.js
