[tool.poetry]
name = "example-awscli-local"
version = "0.1.0"
description = ""
authors = ["fg51 <zknsftk1msrk@gmail.com>"]
readme = "README.md"
packages = [{include = "example_awscli_local"}]

[tool.poetry.dependencies]
python = "^3.10"
awscli-local = "^0.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
